<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EFE6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="341dp"
        android:layout_height="37dp"
        android:text="@string/Alan_Hesapla"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />


    <Button
        android:id="@+id/rectangle_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dikdortgen_alan"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#8E1111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.127" />


    <Button
        android:id="@+id/circle_btn"
        android:layout_width="353dp"
        android:layout_height="66dp"
        android:text="@string/Cember_alani"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#8E1111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_btn"
        app:layout_constraintVertical_bias="0.133" />


</androidx.constraintlayout.widget.ConstraintLayout>